--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ body {
     background-color: #D9D9D9;
 }
 .container.login {
+    position: absolute;
     background-color: #FFFFFF;
     border-radius: 20px;
     padding: 45px 25px;
@@ -72,5 +73,44 @@ button.btn.btn-login {
     flex: 0 1 auto;
     min-width: 250px;
 }
+.cancelbtn {
+    position: relative;
+    top: -50px;
+    right: -255px;
+    filter: drop-shadow(0 0 0.75rem #fff);
+    border-radius: 50px;
+    background-color: #fff;
+    height: 50px;
+    width: 50px;
+    border: none;
+}
+.item-1 {
+    position: absolute;
+    top: 160px;
+    left: 20px;
+}
+.item-2 {
+    position: absolute;
+    bottom: 310px;
+    right: 20px;
+}
+.item-3 {
+    position: absolute;
+    bottom: 300px;
+    left: 55px;
+}
+.item-4 {
+    position: absolute;
+    top: 5px;
+    right: 20px;
 
+}
+.item-5 {
+    position: absolute;
+    bottom: 0;
 
+}
+.item-6 {
+    position: absolute;
+    bottom: 0;
+}
